--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <title>GifTeam</title>
-    <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      #teammates { list-style-type: none; margin: 0; padding: 0; }
-      div { display: inline-block; }
-    </style>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-
+    <ul id="users"></ul>
     <script src="js/app.js"></script>
   </body>
 </html>
